--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,29 @@
+/* Main Style */
+
+.div-center {
+  display: table;
+  margin: 0 auto;
+}
+
+.div-center img {
+  width: 10rem;
+}
+
+.buttons-group {
+  display: flex;
+}
+
+.buttons-group button:first-child {
+  margin-right: 8px;
+}
+
+a, div, img, p, button {
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* Plug's */
 
 .plug, .news {
@@ -14,7 +40,15 @@
   background-color: #3F8AE0;
   border-radius: 25px;
   padding: 0 5px;
-  font-size: 15px;
+  font-size: 17px;
+}
+
+.block__hot {
+  color: #FFFFFF;
+  background-color: red;
+  border-radius: 25px;
+  padding: 0 5px;
+  font-size: 17px;
 }
 
 /* Block Random Memes / Sasha */
@@ -240,26 +274,21 @@
 /*
 .Tabbar {
   border-radius: 15px;
-  /*box-shadow: none !important;*/
-  /*box-shadow: 0 -2px 4px 0 rgb(0 0 0 / 6%), 0 0 2px 0 rgb(0 0 0 / 8%);*/
-  /*
+  box-shadow: none !important;
+  box-shadow: 0 -2px 4px 0 rgb(0 0 0 / 6%), 0 0 2px 0 rgb(0 0 0 / 8%);
   box-shadow: 0 0 20px 8px rgba(0,0,0,0.15) !important;
   padding: 5px;
   justify-content: center;
   display: flex;
   align-items: center;
-  margin: 13px;
+  margin: 14.3px;
   width: 90% !important;
 }
-*/
 
-/*
 .Tabbar--ios.Tabbar--shadow:before {
   display:none !important;
 }
-*/
 
-/*
 .TabbarItem--selected {
   animation-name: boop;
   animation-duration: 0.7s;
